objects/partdir_mp__Partner_App__c.object
<CustomObject>
    <fields>
        <fullName>partdir_mp__App_Logo_Id__c</fullName>
        <inlineHelpText>Upload app logo image (max size 500x500 px)</inlineHelpText>
        <label>App Logo Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Approver_Email__c</fullName>
        <formula>partdir_mp__Partner__r.partdir_mp__Approver__r.Email</formula>
        <label>Approver Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Comments_Count__c</fullName>
        <label>Comments Count</label>
        <summaryFilterItems>
            <field>partdir_mp__App_Comment__c.partdir_mp__Rating__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>partdir_mp__App_Comment__c.partdir_mp__Partner_App__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>partdir_mp__CommunityUrl__c</fullName>
        <label>CommunityUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Full_Description__c</fullName>
        <label>Full Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Consumer Goods</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>High Tech</fullName>
                </value>
                <value>
                    <fullName>Life Sciences</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Nonprofit</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Transportation &amp; Logistics</fullName>
                </value>
                <value>
                    <fullName>Travel &amp; Hospitality</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>partdir_mp__List_Description__c</fullName>
        <label>List Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Partner_Email__c</fullName>
        <formula>Owner:User.Email</formula>
        <label>Partner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Partner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Apps</relationshipLabel>
        <relationshipName>Partner_Apps</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Published__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Rating_Average__c</fullName>
        <formula>IF(partdir_mp__Comments_Count__c  &gt; 0, partdir_mp__Rating_Sum__c  /  partdir_mp__Comments_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Rating_Sum__c</fullName>
        <label>Rating Sum</label>
        <summarizedField>partdir_mp__App_Comment__c.partdir_mp__Rating__c</summarizedField>
        <summaryFilterItems>
            <field>partdir_mp__App_Comment__c.partdir_mp__Rating__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>partdir_mp__App_Comment__c.partdir_mp__Partner_App__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <label>Partner App</label>
    <listViews>
        <fullName>partdir_mp__All</fullName>
        <columns>NAME</columns>
        <columns>partdir_mp__Published__c</columns>
        <columns>partdir_mp__Reviewed__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Apps</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>